# BookHaven

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README-DockerHub.md  README.md  compose.yml.example  main.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-publish.yml
backend/: .coveragerc  .gitignore  alembic.ini  asgi.py  celery_app.py  entrypoint.sh  gunicorn_logging.py  main.py  migrations.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0157205d4a2e_updating_users_table_for_totp_setup.py  09c9fb1450dd_adding_indexes_to_users_table.py  0f3ae9fc03e3_users_table_migration.py  103c5bb766a1_converting_last_used_otp_to_string.py  12285fde0fd3_new_epubmetadata_table_indexes.py  18d14440c61c_updating_users_table_for_checks_against_.py  1dca544a8766_new_tables.py  3f15c1415342_add_rbac.py  462141604020_migrate_from_db_image_storage_start.py  62c31a6df1a0_migrate_from_db_image_storage_finish.py  9dd6804d59a2_new_table_to_handle_requests.py  cdd5c5488d31_migrate_relative_path_identifiers_to_.py
backend/config/: config.py  logger.py
backend/functions/: auth.py  blueprints.py  book_management.py  db.py  extensions.py  init.py  roles.py  utils.py
backend/functions/metadata/: edit.py  scan.py
backend/functions/tasks/: scan.py
backend/models/: epub_metadata.py  progress_mapping.py  requests.py  users.py
backend/routes/: admin.py  auth.py  authors.py  books.py  media.py  opds.py  react.py  scan.py  users.py
backend/templates/: index.html
backend/tests/: conftest.py  test_celery.py  test_config_config.py  test_config_logger.py  test_functions_book_management.py  test_functions_db.py  test_functions_init.py  test_functions_metadata_scan.py  test_functions_utils.py  test_routes_admin.py  test_routes_auth.py  test_routes_authors.py  test_routes_books.py  test_routes_media.py  test_routes_react.py  test_routes_users.py
backend/tests/epubs/: Test Book - Author One.epub  Test Book 2 - Author Two.epub
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: AccountModal.tsx  AdminModal.tsx  All.css  AuthorGridCell.tsx  AuthorPage.tsx  Authors.Buttons.css  Authors.General.css  Authors.Grid.css  Authors.Responsive.css  Authors.tsx  BookCard.css  BookCard.tsx  Books.tsx  Home.tsx  Login.tsx  Otp.tsx  Reader.tsx  RequestsModal.tsx  SearchBar.tsx  Sidebar.tsx  (+1 more)
models/: epub_metadata.py
templates/: index.html
(+5 files in other folders)
