[project]
name = "BookHaven"
version = "1.7.3"
description = "BookHaven scans and manages your local library of EPUB ebooks, and allows you to read and download your ebooks on any of your devices, with a sleek, modern, and responsive interface."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0,<2.0.0",
    "amqp>=5.3.1,<6.0.0",
    "authlib>=1.4.0,<2.0.0",
    "bcrypt>=4.2.1,<5.0.0",
    "billiard>=4.2.1,<5.0.0",
    "blinker>=1.9.0,<2.0.0",
    "cachelib>=0.9.0,<1.0.0",
    "celery>=5.4.0,<6.0.0",
    "certifi>=2025.1.31",
    "cffi>=1.17.1,<2.0.0",
    "charset-normalizer>=3.4.1,<4.0.0",
    "click>=8.1.8,<9.0.0",
    "click-didyoumean>=0.3.1,<1.0.0",
    "click-plugins>=1.1.1,<2.0.0",
    "click-repl>=0.3.0,<1.0.0",
    "coverage>=7.6.10,<8.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "deprecated>=1.2.15,<2.0.0",
    "dnspython>=2.7.0,<3.0.0",
    "ebooklib>=0.18,<1.0.0",
    "ebookmeta>=1.2.11,<2.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "filelock>=3.16.1,<4.0.0",
    "flask>=3.1.1,<4.0.0",
    "flask-caching>=2.3.0,<3.0.0",
    "flask-cors>=5.0.0,<6.0.0",
    "flask-limiter>=3.10.0,<4.0.0",
    "flask-login>=0.6.3,<1.0.0",
    "uvicorn[standard]>=0.30.6,<1.0.0",
    "asgiref>=3.8.1,<4.0.0",
    "idna>=3.10,<4.0.0",
    "iniconfig>=2.0.0,<3.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "jinja2>=3.1.5,<4.0.0",
    "kombu>=5.5.4,<6.0.0",
    "limits>=4.0.0,<5.0.0",
    "logassert>=8.1,<9.0",
    "lxml>=5.3.0,<6.0.0",
    "mako>=1.3.8,<2.0.0",
    "markdown-it-py>=3.0.0,<4.0.0",
    "markupsafe>=3.0.2,<4.0.0",
    "mdurl>=0.1.2,<1.0.0",
    "ordered-set>=4.1.0,<5.0.0",
    "packaging>=24.2,<25.0",
    "pluggy>=1.5.0,<2.0.0",
    "prompt-toolkit>=3.0.48,<4.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pycparser>=2.22,<3.0",
    "pygments>=2.19.1,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyvips>=3.0.0,<4.0.0",
    "redis>=5.2.1,<6.0.0",
    "requests>=2.32.3,<3.0.0",
    "rich>=13.9.4,<14.0.0",
    "setuptools>=75.8.0,<76.0.0",
    "six>=1.17.0,<2.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "tzdata>=2024.2",
    "urllib3>=2.3.0,<3.0.0",
    "vine>=5.1.0,<6.0.0",
    "wcwidth>=0.2.13,<1.0.0",
    "werkzeug>=3.1.3,<4.0.0",
    "wrapt>=1.17.2,<2.0.0",
]
